--- a/html/page_AES.html
+++ b/html/page_AES.html
@@ -79,7 +79,7 @@ using <span class="Att">AESInverse256</span> = BlockCipher&lt;....&gt; ;
 <b>AESInverse256</b> implements inverse AES-256 cipher.
 </p>
 
-<a name="PlatformAES"><h4>Platform AES</h4></a>
+<h4 id="PlatformAES">Platform AES</h4>
 
 <p>
 The file <b>PlatformAES.h</b> contains stub definitions for AES cipher types.
