--- a/html/page_CharProp.html
+++ b/html/page_CharProp.html
@@ -208,7 +208,7 @@ class <span class="Att">PrintCString</span>
 
 </pre>
 
-<a name="Prop"><h4>Character properties</h4></a>
+<h4 id="Prop">Character properties</h4>
 
 <p>
 The following functions return character properties. The argument type is one of traditional
