--- a/html/page_ConsoleInput.html
+++ b/html/page_ConsoleInput.html
@@ -292,7 +292,7 @@ device. Then it redirects console to the PTP console.
 Destructor stops redirection and closes the PTP console.
 </p>
 
-<a name="ReadPTPCon"><h4>ReadPTPCon</h4></a>
+<h4 id="ReadPTPCon">ReadPTPCon</h4>
 
 <p>
 The class <b>ReadPTPCon</b> is a <b>PTP Con</b> device reader. It is declared in the header
