--- a/html/page_ContainerLists.html
+++ b/html/page_ContainerLists.html
@@ -743,7 +743,7 @@ The method <b>rotate()</b> is specific for circular lists. It rotates the list. 
 Pointer to this element is returned.
 </p>
 
-<a name="LinearDList"><h4>LinearDList</h4></a>
+<h4 id="LinearDList">LinearDList</h4>
 
 <p>
 This is a linear double linked list with a top element pointer.
@@ -898,7 +898,7 @@ Extra method arguments are forwarded to the object constructor.
 to point to the next element.
 </p>
 
-<a name="LinearDList2"><h4>LinearDList2</h4></a>
+<h4 id="LinearDList2">LinearDList2</h4>
 
 <p>
 This is a linear double linked list with first and last element pointers.
@@ -1166,7 +1166,7 @@ to point to the next element (in respect to the cursor movement direction).
 This list supports the reverse functor applying.
 </p>
 
-<a name="CircularDList"><h4>CircularDList</h4></a>
+<h4 id="CircularDList">CircularDList</h4>
 
 <p>
 This is a circular double linked list with a top element pointer.
