--- a/html/page_DDLEngine.html
+++ b/html/page_DDLEngine.html
@@ -1056,7 +1056,7 @@ struct <span class="Att">TypedDataPtr</span> : DataPtr
 
 </pre>
 
-<a name="TypedMap"><h2>TypedMap</h2></a>
+<h2 id="TypedMap">TypedMap</h2>
 
 <p>
 The most convenient way to map <b>DDL</b> data is the class <b>TypedMap</b>. But with this class
