--- a/html/page_Files.html
+++ b/html/page_Files.html
@@ -381,7 +381,7 @@ Write MAY extend the file. The return value should be equal to the given length,
 reason to implement another behavior. 
 </p>
 
-<a name="AltSet"><h4>Alternative set</h4></a>
+<h4 id="AltSet">Alternative set</h4>
 
 <p>
 And the alternative set is:
@@ -416,7 +416,7 @@ In this case the file is extended. The return length is the new file length. If 
 end-of-file and before the write position, the hole is filled by unpredicted values.
 </p>
 
-<a name="FSO"><h3>File system operations</h3></a>
+<h3 id="FSO">File system operations</h3>
 
 <pre>
 
