--- a/html/page_Installation.html
+++ b/html/page_Installation.html
@@ -103,7 +103,7 @@ Open menu <b>Window/Preferences...</b> . Then open the <b>C++/Build/Environment<
 Correct variables <b>CYGWIN</b> and <b>CYGWIN64</b> to point to <b>cygwin</b> and <b>cygwin64</b> installation directories.
 </p>
 
-<a name="WIN64"><h2>WIN64</h2></a>
+<h2 id="WIN64">WIN64</h2>
 
 <p>
 <b>CCore</b> supports the 64-bits Windows development using <b>cygwin64</b>. The host target <b>WIN64</b> is provided.
