--- a/html/page_Integer.html
+++ b/html/page_Integer.html
@@ -676,7 +676,7 @@ int <span class="Att">QSym</span>(const Integer &amp;a,const Integer &amp;b);
 <b>a</b> and <b>b</b> must be coprime and <b>b</b> must be odd, otherwise an exception is thrown.
 </p>
 
-<a name="Algo"><h3>Algo</h3></a>
+<h3 id="Algo">Algo</h3>
 
 <p>
 The algorithm package <b>Algo</b> must comply with the following pattern. Functions, operating on
