--- a/html/page_Meta.html
+++ b/html/page_Meta.html
@@ -528,7 +528,7 @@ This is a whole list of <b>Meta-constant</b>s. They can be used to determine dif
 <b>IsBaseOf</b> equals <b>true</b> iff the type <b>B</b> is a base class of the class <b>D</b>.
 </p>
 
-<a name="Target"><h2>Target support for Meta</h2></a>
+<h2 id="Target">Target support for Meta</h2>
 
 <p>
 Target must provide the following entities in the its header file <b>PlatformBase.h</b>.
