--- a/html/page_PTP.html
+++ b/html/page_PTP.html
@@ -399,7 +399,7 @@ The file <b>net/PTPBase.h</b> contains this protocol definition in <b>C++</b> in
 <b>PTP</b>.
 </p>
 
-<a name="ClientDevice"><h3>PTPClientDevice</h3></a>
+<h3 id="ClientDevice">PTPClientDevice</h3>
 
 <p>
 <b>PTPClientDevice</b> is an implementation of <b>PTP</b> client protocol as a device class. 
@@ -561,9 +561,9 @@ struct <span class="Att">TransExt</span>
 
 </pre>
 
-<a name="Ext"><p>
+<p id="Ext">
 Another way to perform a transaction is to define a special structure <b>Ext</b> like this:
-</p></a>
+</p>
 
 <pre>
 
@@ -781,7 +781,7 @@ You can attach/detach some <b>PacketEndpointDevice::ConnectionProc</b> interface
 the methods <b>attach()/detach()</b>.
 </p>
 
-<a name="ServerDevice"><h3>PTPServerDevice</h3></a>
+<h3 id="ServerDevice">PTPServerDevice</h3>
 
 <p>
 <b>PTPServerDevice</b> is an implementation of <b>PTP</b> server protocol as a device class. 
