--- a/html/page_Packet.html
+++ b/html/page_Packet.html
@@ -1058,7 +1058,7 @@ The process has two phases, because the first call can be done in any context, b
 must be called in a lock-free context.
 </p>
 
-<a name="PacketFormat"><h4>PacketFormat</h4></a>
+<h4 id="PacketFormat">PacketFormat</h4>
 
 <p>
 Packet format consists of three values: the prefix length, the suffix length and the maximum working data length.
