--- a/html/page_PacketEndpoint.html
+++ b/html/page_PacketEndpoint.html
@@ -38,7 +38,7 @@ There are two abstract packet endpoint interface: <b>PacketEndpointDevice</b> an
 All network code is enclosed in the <b>Net</b> namespace.
 </p>
 
-<a name="PacketEndpointDevice"><h4>PacketEndpointDevice</h4></a>
+<h4 id="PacketEndpointDevice">PacketEndpointDevice</h4>
 
 <p>
 <b>PacketEndpointDevice</b> is a "client-side" interface. It is a logical packet communication endpoint. 
@@ -134,7 +134,7 @@ processing.
 <b>connection_close()</b> is called if the peer has requested to close the connection. 
 </p>
 
-<a name="PacketMultipointDevice"><h4>PacketMultipointDevice</h4></a>
+<h4 id="PacketMultipointDevice">PacketMultipointDevice</h4>
 
 <p>
 <b>PacketMultipointDevice</b> is a "server-side" interface. It is a logical packet communication endpoint. 
