--- a/html/page_PrintDevice.html
+++ b/html/page_PrintDevice.html
@@ -164,7 +164,7 @@ the <b>Sys::ConBase</b> class is defined. Usually a target device has a serial p
 to the host computer through the port driver.
 </p>
 
-<a name="PrintFile"><h4>PrintFile (HCore)</h4></a>
+<h4 id="PrintFile">PrintFile (HCore)</h4>
 
 <p>
 <b>PrintFile</b> class is designed to print to a file. On <b>HCore</b> targets this class is based on
@@ -367,7 +367,7 @@ class <span class="Att">PrintFile</span> : public PrintAsyncFile
 To open a file the <a href="page_DefaultFileDevice.html"><b>DefaultFileDevice</b></a> is used.
 </p>
 
-<a name="PrintAsyncFile"><h4>PrintAsyncFile</h4></a>
+<h4 id="PrintAsyncFile">PrintAsyncFile</h4>
 
 <p>
 <b>PrintAsyncFile</b> is built using the <a href="page_AsyncFileClients.html"><b>AsyncFile</b></a> class.
