--- a/html/page_Printing.html
+++ b/html/page_Printing.html
@@ -601,7 +601,7 @@ class <span class="Att">RepeatChar</span>
 </pre>
 
 
-<a name="Title"><h3>Title printing</h3></a>
+<h3 id="Title">Title printing</h3>
 
 <p>
 Title looks like this:
