--- a/html/page_Random.html
+++ b/html/page_Random.html
@@ -378,7 +378,7 @@ Finally, the public method <b>warp()</b> can be used to update the state buffer.
 The provided value is used to XOR the state buffer.
 </p>
 
-<a name="PlatformRandom"><h2>PlatformRandom</h2></a>
+<h2 id="PlatformRandom">PlatformRandom</h2>
 
 <p>
 The header <b>PlatformRandom.h</b> is a stub header. It contains the definition of the type 
