--- a/html/page_SHA.html
+++ b/html/page_SHA.html
@@ -71,7 +71,7 @@ using <span class="Att">KeyedSHA512</span> = KeyedHashFunction&lt;....&gt; ;
 <b>KeyedSHAnnn</b> implements the HMAC based on the correspondent SHA-nnn algorithm.
 </p>
 
-<a name="PlatformSHA"><h3>Platform SHA</h3></a>
+<h3 id="PlatformSHA">Platform SHA</h3>
 
 <p>
 The file <b>PlatformSHA.h</b> contains stub definitions for the PlatformSHA types.
