--- a/html/page_SaveLoad.html
+++ b/html/page_SaveLoad.html
@@ -253,7 +253,7 @@ struct <span class="Att">SaveLoadBe16</span>
 
 </pre>
 
-<a name="Devices"><h3>Serialization devices</h3></a>
+<h3 id="Devices">Serialization devices</h3>
 
 <p>
 A serialization output device must provide the following methods:
