--- a/html/page_Taxonomy.html
+++ b/html/page_Taxonomy.html
@@ -256,7 +256,7 @@ class SomeClass
 Usually, this interface is implemented by <b>Container Type</b>s or some <b>Proxy Type</b>s.
 </p>
 
-<a name="ObjectPointerInterface"><h4>Object Pointer Interface</h4></a>
+<h4 id="ObjectPointerInterface">Object Pointer Interface</h4>
 
 <p>
 <b>Object Pointer Interface</b> is implemented by <b>Pointer Type</b>s to give access to the pointee object:
