--- a/html/page_TreeMaps.html
+++ b/html/page_TreeMaps.html
@@ -42,7 +42,7 @@ There are also <a href="page_CompactMaps.html">compact variants</a> of these map
 Constant maps propagate constantness to its elements.
 </p>
 
-<a name="RBTreeMap"><h4>RBTreeMap</h4></a>
+<h4 id="RBTreeMap">RBTreeMap</h4>
 
 <p>
 This is the first map, built on red-black tree algorithms. There is the additional template parameter 
@@ -374,7 +374,7 @@ key value is zero.
 <b>guard()</b> is a guard method. It ensures the given <b>key</b> belongs to the key range.
 </p>
 
-<a name="RadixTreeMap"><h4>RadixTreeMap</h4></a>
+<h4 id="RadixTreeMap">RadixTreeMap</h4>
 
 <p>
 This is the second map, built on radix tree algorithms. The <b>K</b> must be an unsigned integral type.
