--- a/html/page_RadixHeap.html
+++ b/html/page_RadixHeap.html
@@ -122,7 +122,7 @@ has the field <b>ok</b>, which indicates success of the operation,
 and the field <b>delta</b>, equals the difference between the length of the old block and the new one.
 </p>
 
-<a name="Primary"><h4>Primary memory provider</h4></a>
+<h4 id="Primary">Primary memory provider</h4>
 
 <p>
 A primary memory provider is a class with the following "prototype":
