--- a/html/page_Lists.html
+++ b/html/page_Lists.html
@@ -1242,12 +1242,12 @@ after (before with respect to the cursor direction) the current (non-null) posit
 
 <p>
 <b>ins_before()</b> inserts the given object to the list before the given position.
-<b>ins_before(RevCur &cur,T *obj)</b> modifies the cursor to keep one valid.
+<b>ins_before(RevCur &amp;cur,T *obj)</b> modifies the cursor to keep one valid.
 </p>
 
 <p>
 <b>ins_after()</b> inserts the given object to the list after the given position.
-<b>ins_after(Cur &cur,T *obj)</b> modifies the cursor to keep one valid.
+<b>ins_after(Cur &amp;cur,T *obj)</b> modifies the cursor to keep one valid.
 </p>
 
 <p>
