--- a/html/page_CharProp.html
+++ b/html/page_CharProp.html
@@ -299,7 +299,7 @@ important character sets.
 
 inline const char * <span class="Att">GetSpaceChars</span>() { return " \t\f\v\r\n"; }
 
-inline const char * <span class="Att">GetPunctChars</span>() { return "!\"#$%&'()*+,-./:;&lt;=&gt;?&#64;[\\]^`{|}~"; } 
+inline const char * <span class="Att">GetPunctChars</span>() { return "!\"#$%&'()*+,-./:;&lt;=&gt;?@[\\]^`{|}~"; } 
 
 inline const char * <span class="Att">GetDigitChars</span>() { return "0123456789"; }
 
