--- a/html/page_Scanning.html
+++ b/html/page_Scanning.html
@@ -415,7 +415,7 @@ There are three variants of the string scanning, they are selected by options.
 Options <b>".q"</b> and <b>".Q"</b> means scan a quoted string (<b>StringScanQuote</b>),
 <b>".s"</b> and <b>".S"</b> means scan up to a space character (<b>StringScanToSpace</b>),
 and <b>".p"</b> and <b>".P"</b> means scan up to a space or punctuation character (<b>StringScanToPunct</b>). 
-The last mode is default, punctuation characters are: <b>! " # $ % &amp; ' ( ) * + , - . / : ; &lt; = &gt; ? &#64; [ \ ] ^ ` { | } ~</b>.
+The last mode is default, punctuation characters are: <b>! " # $ % &amp; ' ( ) * + , - . / : ; &lt; = &gt; ? @ [ \ ] ^ ` { | } ~</b>.
 </p>
 
 <p>
