--- a/html/page_Taxonomy.html
+++ b/html/page_Taxonomy.html
@@ -346,7 +346,7 @@ templated definitions in a very flexible manner. Such class can be huge or small
 See, for example, <a href="page_OwnPtr.html"><b>OwnAlgo</b></a>. 
 </p>
 
-<h4>Class-function</h4>
+<h4 id="ClassFunction">Class-function</h4>
 
 <p>
 <b>Class-function</b> is a class, used as a function. Its constructor is a function body. The constructed
